1、修改“整体统计页面”，扁平化设计 2、隐藏上端的菜单栏、使用 top：-115px；

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -455,7 +455,7 @@ body.login2 {
     display: none; }
 
 .navbar.scroll-hide.closed {
-  top: -45px; }
+  top: -115px; }
 
 /*----------------------------------------------------------------------------------- */
 /*  Page Titles */
@@ -954,7 +954,7 @@ th:active {
     .stats-container [class^="col-"]:last-child, .stats-container [class*="col-"]:last-child {
       border: 0; }
     .stats-container [class^="col-"] .number, .stats-container [class*="col-"] .number {
-      font-size: 4.2em;
+      font-size: 3.0em;
       font-weight: 100;
       color: #007aff;
       line-height: 1.3em;
@@ -3116,3 +3116,26 @@ body.fourofour {
       left: 20px; }
     ul.timeline.animated li.active:nth-child(odd) .timeline-content {
       left: 0; } }
+
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 100;
+    src: local('Lato Hairline'), local('Lato-Hairline'), url(http://fonts.gstatic.com/s/lato/v10/boeCNmOCCh-EWFLSfVffDg.woff) format('woff');
+}
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    src: local('Lato Light'), local('Lato-Light'), url(http://fonts.gstatic.com/s/lato/v10/KT3KS9Aol4WfR6Vas8kNcg.woff) format('woff');
+}
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+}
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+}
